# MimiC

./: README.md
Ideation-Phase/: CMakeLists.txt  GETTING_STARTED.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  TODO.md  blink.c  executor.c  executor.h  fatfs_glue.c  freertos_blink.c  main.c  sd_card.c  sd_card.h  symbol_table.c  symbol_table.h  tcc_port.c  tcc_port.h  uart_shell.c  uart_shell.h
MimiC-v2-DEBUG/mimic_debug2/include/: mimic.h
MimiC-v2-DEBUG/mimic_debug2/src/: main.c
MimiC-v2-DEBUG/mimic_debug2/src/compiler/: mimic_compiler.c
MimiC-v2-DEBUG/mimic_debug2/src/fs/: mimic_fat32.c
MimiC_1-0-0_Alpha/: CMakeLists.txt  README.md
MimiC_1-0-0_Alpha/include/: mimic_fat32.h
MimiC_1-0-0_Alpha/src/fs/: mimic_fat32.c
MimiC_1-0-0_Alpha/src/kernel/: mimic_kernel.c
Test-01/: CMakeLists.txt  README.md  gpio.h  main.c  mimic.h  mimic_cc.h  mimic_codegen.c  mimic_fat32.c  mimic_fat32.h  mimic_kernel.c  mimic_lexer.c  mimic_linker.c  stdlib.h  syscall.h
v.0.0.1-NON-COMPILING/: mimic_parser.c
